restored Java 8 compatibility #130